syntax = "proto3";

import "google/protobuf/timestamp.proto";

package schedule;
option go_package = ".;pb";

service ScheduleService {
  rpc index (IndexRequest) returns (IndexResponse) {}
  rpc show (ShowRequest) returns (ShowResponse) {}
  rpc create (CreateRequest) returns (CreateResponse) {}
  rpc update (UpdateRequest) returns (UpdateResponse) {}
  rpc delete (DeleteRequest) returns (DeleteResponse) {}
}

message Schedule {
  string id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp date = 4;
  string location = 5;
}

message IndexRequest {}
message IndexResponse {}
message ShowRequest {}
message ShowResponse {}
message CreateRequest {}
message CreateResponse {}
message UpdateRequest {}
message UpdateResponse {}
message DeleteRequest {}
message DeleteResponse {}